tests/derive_ui/flatten_enum_in_struct.stderr
error[E0277]: the trait bound `SubCmd: clap::Args` is not satisfied
 --> tests/derive_ui/flatten_enum_in_struct.rs:4:10
  |
4 |     sub: SubCmd,
  |          ^^^^^^ the trait `clap::Args` is not implemented for `SubCmd`
  |
  = help: the following other types implement trait `clap::Args`:
            Box<T>
            Opt
